# robo

./: .gitattributes  .gitignore  404.html  Makefile  README.md  add_photo.py  big.py  big1.py  big2.py  cam.py  cam_calib.py  cam_full.py  cam_params.yml  cap.py  cap_post.py  capture.py  change.py  charuco.py  check.py  config.yaml  dcam_params.yml  edge_drawer.py  ee.py  farm.py  farm1.py  farm2.py  farm3.py  get_params.py  graph.py  handeye.py  handeye_april.py  handeye_charuco.py  handeye_chess.py  handeye_new.py  handeye_pipeline.md  how  hull.py  index.html  laser.py  main.py  (+24 more)
api/: index.html
calib/: cap.py  charuco_calibrate.py  hand_calib.py  photo_saver.py  stereo_calibration.xml  utils.py
calibration/: README.md  __init__.py  april.py  aruco.py  base.py  calibrator.py  camera_runner.py  capture.py  charuco.py  charuco_intrinsics.py  chessboard.py  comparison.py  data_collector.py  detector.py  detectors.py  evaluate.py  extractor.py  gen_charuco_pattern.py  grid_calibrator.py  handeye.py  main.py  marker_grid.py  metrics.py  pattern.py  pose_check.py  pose_extractor.py  pose_loader.py  pose_utils.py  robot_runner.py  run.py  runner.py  runner_camera.py  runner_robot.py  utils.py  validate.py  validation.py  visualizer.py  workflow.py  workflows.py  workflows_charuco.py  (+1 more)
captures/: cloud_aggregated.ply
captures1/: 000_depth.npy  001_depth.npy  002_depth.npy  003_depth.npy  004_depth.npy  005_depth.npy  006_depth.npy  007_depth.npy  008_depth.npy  009_depth.npy  010_depth.npy  011_depth.npy  012_depth.npy  013_depth.npy  014_depth.npy  015_depth.npy  016_depth.npy  017_depth.npy  018_depth.npy  019_depth.npy  020_depth.npy  021_depth.npy  022_depth.npy  023_depth.npy  024_depth.npy  025_depth.npy  026_depth.npy  027_depth.npy  028_depth.npy  029_depth.npy  030_depth.npy  031_depth.npy  032_depth.npy  033_depth.npy  034_depth.npy  035_depth.npy  036_depth.npy
cli/: charuco_calib.py  depth_check.py  get_intrinsics.py  handeye_calib.py  just.py  path_runner.py  pointcloud_capture.py  pointcloud_transform.py  pointcloud_view.py  poses_saver.py  vis_pointcloud.py
cloud/: 000_depth.npy  001_depth.npy  002_depth.npy  003_depth.npy  004_depth.npy  005_depth.npy  006_depth.npy  007_depth.npy  008_depth.npy  009_depth.npy  010_depth.npy  011_depth.npy  012_depth.npy  013_depth.npy  014_depth.npy  poses.json
cloud1/: 000_depth.npy  000_depth_base.ply  001_depth.npy  001_depth_base.ply  002_depth.npy  002_depth_base.ply  003_depth.npy  003_depth_base.ply  004_depth.npy  004_depth_base.ply  005_depth.npy  005_depth_base.ply  006_depth.npy  006_depth_base.ply  007_depth.npy  007_depth_base.ply  008_depth.npy  008_depth_base.ply  009_depth.npy  009_depth_base.ply  010_depth.npy  010_depth_base.ply  poses.json
cloud2/: 000_depth.npy  001_depth.npy  002_depth.npy  003_depth.npy  004_depth.npy  005_depth.npy  006_depth.npy  007_depth.npy  008_depth.npy  009_depth.npy  010_depth.npy  011_depth.npy  012_depth.npy  013_depth.npy  014_depth.npy  015_depth.npy  016_depth.npy  017_depth.npy  018_depth.npy  019_depth.npy  020_depth.npy  021_depth.npy  022_depth.npy  023_depth.npy  024_depth.npy  025_depth.npy  026_depth.npy  (+2 more)
(+326 files in other folders)
