[build-system]
requires = ["setuptools>=64", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robo"
version = "0.1.0"
description = "Robotics Vision & Calibration Suite"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "numpy",
    "open3d==0.19.0",
    "opencv-contrib-python==4.11.0.86",
    "pyrealsense2==2.55.1.6486",
    "python-json-logger==3.3.0",
    "pyyaml==6.0.2",
    "scipy==1.15.3",
    "tqdm==4.67.1",
]

[project.scripts]
poses-saver = "robot.workflows:main"
path-runner = "robot.workflows:main"
charuco-calib = "calibration.workflows:main"
handeye-calib = "calibration.workflows:main"
get-intrinsics = "vision.tools:main_intrinsics"
depth-check = "vision.tools:main_depth"
pointcloud-capture = "vision.tools:main_capture"
pointcloud-transform = "vision.tools:main_transform"
pointcloud-view = "vision.tools:main_view"
vis-pointcloud = "vision.tools:main_pipeline"
vision-cli = "vision.tools:main"
cloud-aggregate = "vision.analysis.aggregator:main"
robot-cli = "robot.workflows:main"
calibration-cli = "calibration.workflows:main"
restart-cli = "robot.workflows:main"
validation-cli = "validation.workflows:main"

[tool.setuptools.package-data]
robot = ["*.py", "*.pyx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["robot*", "utils*", "vision*", "calibration*", "validation*"]
