[build-system]
requires = ["setuptools>=64", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robo"
version = "0.1.0"
description = "Robotics Vision & Calibration Suite"
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "numpy",
    "open3d==0.19.0",
    "opencv-contrib-python==4.11.0.86",
    "pyrealsense2==2.55.1.6486",
    "pynput",
    "python-json-logger",
    "pyyaml",
    "hydra-core",
    "loguru",
    "scipy",
    "tqdm",
    "matplotlib",
    "seaborn",
    "lmdb",
]

[tool.setuptools.package-data]
robot = ["*.py", "*.pyx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["robot*", "utils*", "vision*", "calibration*"]
