[build-system]
requires = ["setuptools>=64", "wheel", "cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robo"
version = "0.1.0"
description = "Robotics Vision & Calibration Suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core math & utilities
    "numpy==2.3.1",
    "scipy==1.16.0",
    "pyyaml==6.0.2",
    "loguru==0.7.3",
    "tqdm==4.67.1",
    # Computer vision & geometry
    "open3d==0.19.0",
    "opencv-contrib-python==4.11.0.86",
    "pyrealsense2==2.55.1.6486",
    "scikit-image==0.24.0",
    "networkx==3.3",
    # Interaction & visualization
    "pynput==1.8.1",
    "plotly==6.1.2",
    "matplotlib>=3.10.3",
]

[project.optional-dependencies]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[tool.setuptools.package-data]
"*" = ["py.typed"]
robot = ["*.py", "*.pyx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["robot*", "utils*", "calibration*", "robot_scan*"]
